refactor(Member): Member 도메인 내부 DTO에서 Public API인 MemberExternalDTO의 의존성 제거
Member 도메인 내부 DTO에서 외부 도메인 모듈을 위해서 제공되는 Public API인 MemberExternalDTO.WithFollowStatus를 사용하던 것을 제거하고 같은 내부 도메인 모듈을 위한 DTO를 사용하게 변경하였습니다.